--- a/.gitIgnore
+++ b/.gitIgnore
@@ -1,9 +1,27 @@
-*.DS_Stroe
+# Logs
+logs
 *.log
-*.tsbuildinfo
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-**/package-lock.json
-**/node_modules/
-
-**/dist/*
+node_modules
 dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.turbo
+pnpm-lock.yaml
+
