--- a/turbo.json
+++ b/turbo.json
@@ -2,8 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "dependsOn": ["^build"]
     },
     "start:live": {
       "cache": false,
