--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,10 @@
     "build:start": {
       "cache": false,
       "persistent": true
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
