--- a/packages/react/components/layout/package.json
+++ b/packages/react/components/layout/package.json
@@ -30,6 +30,7 @@
     "@vanilla-extract/css": "^1.16.0",
     "@vanilla-extract/esbuild-plugin": "^2.3.11",
     "@vanilla-extract/sprinkles": "^1.6.3",
+    "@vanilla-extract/recipes": "^0.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.3"
