FEAT: 아코디언 추가

--- a/services/nextblog/my-next-app/package.json
+++ b/services/nextblog/my-next-app/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@hippods/react-components-button": "workspace:*",
     "@hippods/react-components-layout": "workspace:*",
+    "@hippods/react-components-accordion": "workspace:*",
     "@hippods/react-hooks-button": "workspace:*",
     "@hippods/react-hooks-toggle": "workspace:*",
     "@hippods/themes": "workspace:*",
