--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -11,6 +11,8 @@
     "@hippods/react-components-layout": "workspace:*",
     "@hippods/react-components-button": "workspace:*",
     "@hippods/react-components-accordion": "workspace:*",
+    "@hippods/react-components-input": "workspace:*",
+    "@hippods/react-components-select": "workspace:*",
     "@hippods/react-hooks-button": "workspace:*",
     "@hippods/react-hooks-toggle": "workspace:*",
     "@hippods/themes": "workspace:*",
