--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -2,20 +2,23 @@
   "name": "@hippods/storybook",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test:ui": "vitest --ui",
+    "build-storybook": "storybook build",
+    "test": "vitest"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
-    "@hippods/react-components-layout": "workspace:*",
-    "@hippods/react-components-button": "workspace:*",
     "@hippods/react-components-accordion": "workspace:*",
+    "@hippods/react-components-button": "workspace:*",
     "@hippods/react-components-input": "workspace:*",
+    "@hippods/react-components-layout": "workspace:*",
     "@hippods/react-components-select": "workspace:*",
+    "@hippods/react-components-toast": "workspace:*",
     "@hippods/react-hooks-button": "workspace:*",
     "@hippods/react-hooks-toggle": "workspace:*",
     "@hippods/themes": "workspace:*",
+    "@storybook/addon-a11y": "^8.4.4",
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
     "@storybook/addon-onboarding": "^8.4.2",
@@ -23,11 +26,19 @@
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
-    "storybook-addon-root-attributes": "^2.1.3",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/ui": "^2.1.5",
+    "happy-dom": "^15.11.6",
     "prop-types": "^15.8.1",
-    "storybook": "^8.4.2",
-    "vite": "^5.4.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "storybook": "^8.4.2",
+    "storybook-addon-root-attributes": "^2.1.3",
+    "vite": "^5.4.10",
+    "vitest": "^2.1.5"
   }
 }
