--- a/services/nextblog/my-next-app/package.json
+++ b/services/nextblog/my-next-app/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/dynamic": "^2.1.2",
     "@vanilla-extract/next-plugin": "^2.4.6",
+    "@vanilla-extract/recipes": "^0.5.5",
+    "add": "^2.0.6",
+    "googleapis": "^144.0.0",
     "next": "13.5.7",
     "react": "^18",
     "react-dom": "^18"
