--- a/services/nextblog/my-next-app/package.json
+++ b/services/nextblog/my-next-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query-next-experimental": "^5.62.2",
     "@vanilla-extract/css": "^1.16.0",
     "@vanilla-extract/dynamic": "^2.1.2",
     "@vanilla-extract/next-plugin": "^2.4.6",
@@ -16,6 +18,7 @@
     "add": "^2.0.6",
     "googleapis": "^144.0.0",
     "next": "13.5.7",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
