--- a/services/nextblog/my-next-app/package.json
+++ b/services/nextblog/my-next-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@hippods/my-next-app",
+  "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "develop": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
