--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
   "singleQuote": false,
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
   "useTabs": false,
   "trailingComma": "all",
   "printWidth": 80,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
