--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.13",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "tailwindcss": "^3.4.1"
   },
   "packageManager": "pnpm@8.7.1+sha256.9f0febfd67c8f4317f4cf2edbf2ff4bf326f0e7dbb2b5b03aa05248f9faa26c5"
 }
