--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,5 +8,6 @@
     "strict": true,
     "moduleResolution": "node",
     "jsx": "react-jsx"
-  }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
