--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["packages", "services", ".storybook/*.js", ".eslintrc.js"]
+  "include": [
+    "packages",
+    "services",
+    ".storybook/*.js",
+    ".eslintrc.js",
+    "tailwind.config.ts"
+  ]
 }
