--- a/services/nextblog/my-next-app/package.json
+++ b/services/nextblog/my-next-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "develop": "next dev",
-    "build": "next build",
+    "build:sample": "next build",
     "start": "next start",
     "lint": "next lint"
   },
