--- a/services/project/package.json
+++ b/services/project/package.json
@@ -22,18 +22,19 @@
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
-    "@types/formidable": "^3.4.5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@hippods/react-components-interactive": "workspace:*",
     "@hippods/react-components-layout": "workspace:*",
     "@hippods/react-hooks-button": "workspace:*",
     "@hippods/react-hooks-toggle": "workspace:*",
     "@hippods/themes": "workspace:*",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
@@ -42,6 +43,7 @@
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react-icons": "^5.4.0",
+    "sharp": "^0.33.5",
     "supabase": "^1.226.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.1",
