--- a/services/project/package.json
+++ b/services/project/package.json
@@ -17,6 +17,7 @@
     "@uiw/react-md-editor": "^4.0.5",
     "date-fns": "^4.1.0",
     "formidable": "^3.5.1",
+    "framer-motion": "^12.0.6",
     "next": "14.2.16",
     "next-remove-imports": "^1.0.12",
     "react": "^18",
